--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^4.4.7"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.1"
   }
 }
